--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,200 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/*---------- My CSS ----------*/
+:root {
+    font-size: 1em;
+    --fonts: 'Lato', 'Arial', sans-serif;
+    --white: #fff;
+    --blk: #000;
+    --lt-gray: #eaeaea;
+    --med-gray: #555;
+    --dk-gray: #444;
+    --natural: #FFF5DA;
+    --lt-pink: #FFE3E1;
+    --med-pink: #FFD1D1;
+    --dk-pink: #FF9494;
+    --lt-green-gray: #D6D2C4;
+    --dk-green-gray: #5D534A;
+    --box-shadow: -0.5rem 0.5rem 1rem var(--med-gray); 
+    --small-shadow: -0.25rem 0.25rem 0.5rem var(--med-gray);
+    --filter-shadow: drop-shadow(-0.5rem 0.5rem 0.5rem var(--med-gray));
+}
+
+/* ----- SKIP LINK STYLES ----- */
+#skip {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+  }
+
+  #skip:focus {
+    position: static;
+    width: auto;
+    height: auto;
+  }
+/* ----- BODY STYLES ----- */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
+    font-family: var(--fonts);
+    font-weight: 300;
+    color: var(--dk-gray);
+    line-height: 1.35;
+    margin:0;
+    padding:0;
+    overflow-x: hidden;
+}
+
+/* ----- HEADER STYLES ----- */
+
+#mainNavigation {
+    visibility: hidden;
+}
+
+header {
+    background-color: #555;
+}
+
+nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+	justify-content: space-between;
+    gap: 0.5em;
+    margin: 0 auto;
+}
+
+nav li{
+	display: inline-block;
+    margin-left: 40px;
+}
+
+nav ul {
+    list-style: none;
+}
+
+li a{
+	color: var(--white);
+	font-size: 20px;
+	font-weight: 300;
+	margin: 0 1em;
+    text-decoration: none;
+}
+
+
+.mobile-nav-icon {
+    float: right;
+    margin-top: 30px;
+    cursor: pointer;
+    display: none;
+}
+
+.mobile-nav-icon i {
+    font-size: 200%;
+    color: #fff;
+}
+
+.mainLogo {
+    height: 100px;
+    width: auto;
+    float: left;
+    margin-top: 20px;
+}
+
+#ourStoryHeader {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+h1 {
+    margin-top: 0;
+    margin-bottom: 35px;
+    line-height:90%;
+    color: #d54242;
+    font-size: 340%;
+    font-family: 'Liu Jian Mao Cao', cursive;
+}
+
+
+.Button {
+    background-color: var(--dk-pink);
+    color: var(--white);
+    width: fit-content;
+    text-decoration: none;
+    margin: 0.5rem auto;
+    border-radius: 1.5em;
+    font-weight: bold;
+    padding: 10px 30px;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+
 h2:after {
     display: block;
     height: 2px;
