--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,7 @@ table {
 }
 
 /* ----- SKIP LINK STYLES ----- */
+
 #skip {
     position: absolute;
     left: -10000px;
@@ -106,85 +107,83 @@ body {
 }
 
 header {
-    background-color: #555;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(images/hero.jpg);
+    height: 100vh;
+    background-size: cover;
+    background-attachment: fixed;
 }
-
-nav {
+.mainNav {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
     align-items: center;
 	justify-content: space-between;
-    gap: 0.5em;
-    margin: 0 auto;
-}
-
-nav li{
-	display: inline-block;
-    margin-left: 40px;
-}
-
-nav ul {
+    padding: 16px;
+	margin: 0 auto;
     list-style: none;
 }
-
-li a{
-	color: var(--white);
-	font-size: 20px;
-	font-weight: 300;
-	margin: 0 1em;
-    text-decoration: none;
+.mainNav li {
+    display: inline-block;
+    margin-left: 40px;
 }
-
-
-.mobile-nav-icon {
-    float: right;
-    margin-top: 30px;
-    cursor: pointer;
-    display: none;
-}
-
-.mobile-nav-icon i {
-    font-size: 200%;
+.mainNav li a:link,
+.mainNav li a:visited {
+    padding: 8px 0;
     color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 90%;
+    border-bottom: 2px solid transparent;
+     -webkit-transition: border-bottom 0.2s;
+    transition: border-bottom 0.2s;
 }
-
+.mainNav li a:hover,
+.mainNav li a:active {
+    border-bottom: 2px solid #FF9494;
+}
 .mainLogo {
     height: 100px;
     width: auto;
     float: left;
     margin-top: 20px;
 }
-
+.logo-brown {
+    display: none;
+    height: 50px;
+    width: auto;
+    float: left;
+    margin: 5px 0;
+}
 #ourStoryHeader {
     position: absolute;
     top: 50%;
     left: 50%;
+    -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
 h1 {
     margin-top: 0;
     margin-bottom: 35px;
     line-height:90%;
-    color: #d54242;
+    color: var(--white);
     font-size: 340%;
-    font-family: 'Liu Jian Mao Cao', cursive;
+    font-family: 'Liu Jian Mao Cao', cursive; 
 }
-
-
-.Button {
+.button {
     background-color: var(--dk-pink);
     color: var(--white);
+    margin-right: 1em;
     width: fit-content;
     text-decoration: none;
-    margin: 0.5rem auto;
     border-radius: 1.5em;
-    font-weight: bold;
+    border: 1px solid var(--dk-pink);
+    font-weight: 400;
     padding: 10px 30px;
-  }
-
-
-
+}
+#btnOurStory {
+    background-color: transparent;
+    color: var(--dk-pink);
+    margin-right: 1em;
+    border: 1px solid var(--dk-pink);
+}
 
 
 
