--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,14 @@ h3 {
     font-size: 1.5em;
     text-transform: uppercase;
 }
+h4 {
+    font-size: 1.25em;
+    font-weight: 400;
+}
+h5 {
+    font-size: 1em;
+    font-weight: 400;
+}
 #mainNavigation {
     visibility: hidden;
 }
@@ -287,14 +295,17 @@ h2 + p {
     padding-right:2em;
     padding-top:70px ;
 }
-
+#howTo iframe {
+    width: 560px;
+    height: 315px;
+}
 #pastries {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 25% 80% 80%;
+    grid-template-rows: 1fr 3fr 3fr;
+    row-gap: 30px;
     padding: 40px;
     background-color: var(--white);
-    
 }
 #pastries h2 {
     grid-row: 1/2;
@@ -303,13 +314,172 @@ h2 + p {
 
 #game {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 20% 80%;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     padding: 40px;
     background-color: var(--lt-pink);
+    height: 320px;
+}
+#game p {
+    grid-row: 2/3;
+    align-items: start;
+    padding-bottom: 60px;
+}
+#game h2 + p {
+    max-width: 70ch;
+    margin: 0 auto;
+    padding-top: 0;
+    font-size: 1.15em;
+}
+span {
+    color: red;
+}
+#random1, #random2 {
+    display: inline-block;
+    font-size: 1.5rem;
+    height: 2em;
+    width: fit-content;
+    padding-left: 32%;
+    text-align: center;
+    color: var(--dk-gray);
+}
+#gameMsg {
+    text-align: center;
+    margin: 0.25em auto;
+    height: 1.5em;
+}
+#gamePlay {
+    grid-row: 3/4;
+    background-color: var(--dk-pink);
+    color: var(--white);
+    width: fit-content;
+    text-decoration: none;
+    border-radius: 1.5em;
+    border: 1px solid var(--dk-pink);
+    font-weight: 400;
+    padding: 10px 30px;
+    margin: 0 auto;
+    margin-bottom: 20px;
 }
 
-footer {
+#form {
+	display: grid;
+    grid-template-rows: 25% 2fr;
+    grid-template-columns: 1fr;
+    align-content: flex-end;
+	margin: 0 auto;
+	color: var(--dk-gray);
+	font-size: 1.1em;
+    height: 320px;
+}
+
+input, label, fieldset{
+	display: block;
+	width: 95%;
+}
+
+.required{
+    display: inline-block;
+    color: var(--dk-pink);
+    font-size: 1.1em;
+    font-weight: bold;
+  }
+  
+  label{
+      padding-left: 0.5em;
+      margin: 0.75em 0 0.25em 0;
+  }
+  
+  input{
+      font-size: 1em;
+      padding: 0.25em 0.5em;
+      border: 1px solid #444;
+      height: 1.5em;
+  }
+  
+  fieldset{
+      border: 1px solid #444;
+      padding: 0.5em 0 1em 0.5em;
+      margin: 0.75em 0 0.25em 0;
+      width: 98%;
+      display: grid;
+      grid-template-columns: 1fr 3fr 1fr 3fr;
+  }
+  
+  input[type=submit]{
+      padding: 0.75em;
+      width: 35%;
+      height: auto;
+      margin-left: 67%;
+      color: #fff;
+      background-color: var(--dk-pink);
+      border: none;
+      font-family: var(--fonts);
+      text-decoration: none;
+      border-radius: 1.5em;
+      border: 1px solid var(--dk-pink);
+      font-weight: 400;
+      padding: 10px 30px;
+      margin: 0 auto;
+      margin-top: 20px;
+  }
+  
+  textarea{
+      width: 100%;
+      height: 5em;
+      margin-bottom: 1em;
+  }
+  
+  input:focus, textarea:focus{
+      border-color: var(--dk-pink);
+      box-shadow: 0 0 0 3px rgba(255, 148, 148, 0.3);
+      border-radius: 4px;
+  }
+  
+  input:invalid, textarea:invalid{
+      border-color: var(--dk-gray);
+  }
+
+#footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     background-color: var(--dk-gray);
     color: var(--lt-gray);
+    height:200px;
+    margin: 0 auto;
 }
+small {
+    grid-column: 1/3;
+    text-align: center;
+    font-size: small;
+    padding-top: 30px;
+}
+#footer h3 {
+    visibility: hidden;
+}
+#address {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    margin-left: 40px;
+}
+
+#socialMedia {
+    grid-row: 1/2;
+    grid-column: 2/3;
+}
+#socialMedia li {
+    display: inline-block;
+    margin-left: 40px;
+    list-style: none;
+}
+#socialMedia {
+    padding: 10px;
+	margin: 0 auto;
+}
+#socialMedia a {
+    color: var(--lt-gray);
+    font-size: 24px;
+    padding-left: 16px;
+}
+
