--- a/styles.css
+++ b/styles.css
@@ -248,20 +248,28 @@ main {
 #features {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 40% 60%;
+    grid-template-rows: auto;
     padding: 40px;
     background-color: var(--white);
+    height: 420px;
 }
+
 #features h2, #features p {
     grid-row: 1/2;
     grid-column: 1/5;
 }
+
 h2 + p {
     max-width: 70ch;
 	margin: 0 auto;
     padding-top: 6em;
     font-size: 1.15em;
 }
+
+#features p {
+    padding-bottom: 40px
+}
+
 #days365, #ready20Min, #organic, #orderAnything {
     display: flex;
     flex-direction: column;
@@ -269,6 +277,7 @@ h2 + p {
     text-align: left;
     padding: 0 20px;
 }
+
 #days365 img.svgImg, #ready20Min img.svgImg, #organic img.svgImg, #orderAnything img.svgImg {
     width: 60px;
     height: auto;
@@ -276,9 +285,11 @@ h2 + p {
     padding-bottom: 1em;
     order: 1;
 }
+
 #days365 h3, #ready20Min h3, #organic h3, #orderAnything h3 {
     order: 2;
 }
+
 #days365 p, #ready20Min p, #organic p, #orderAnything p {
     order: 3;
 }
@@ -295,14 +306,17 @@ h2 + p {
     background-color: var(--lt-pink);
     height: 520px;
 }
+
 #howTo h2 {
     grid-row: 1/2;
     grid-column: 1/5;
 }
+
 #howTo p {
     padding-right:2em;
     padding-top:2px;
 }
+
 #howTo iframe {
     width: 560px;
     height: 315px;
@@ -319,6 +333,7 @@ h2 + p {
     padding: 40px;
     background-color: var(--white);
 }
+
 #pastries h2 {
     grid-row: 1/2;
     grid-column: 1/5;
@@ -336,20 +351,24 @@ h2 + p {
     background-color: var(--lt-pink);
     height: 320px;
 }
+
 #game p {
     grid-row: 2/3;
     align-items: start;
     padding-bottom: 60px;
 }
+
 #game h2 + p {
     max-width: 70ch;
     margin: 0 auto;
     padding-top: 0;
     font-size: 1.15em;
 }
+
 span {
     color: red;
 }
+
 #random1, #random2 {
     display: inline-block;
     font-size: 1.5rem;
@@ -359,11 +378,13 @@ span {
     text-align: center;
     color: var(--dk-gray);
 }
+
 #gameMsg {
     text-align: center;
     margin: 0.25em auto;
     height: 1.5em;
 }
+
 #gamePlay {
     grid-row: 3/4;
     background-color: var(--dk-pink);
@@ -473,15 +494,18 @@ input, label, fieldset{
     height:200px;
     margin: 0 auto;
 }
+
 small {
     grid-column: 1/3;
     text-align: center;
     font-size: small;
     padding-top: 30px;
 }
+
 #footer h3 {
     visibility: hidden;
 }
+
 #address {
     grid-row: 1/2;
     grid-column: 1/2;
@@ -494,6 +518,7 @@ small {
     align-items:flex-start;
     margin-left: 40px;
 }
+
 #socialMedia a {
     color: var(--lt-gray);
     font-size: 24px;
