--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,9 @@ table {
     --small-shadow: -0.25rem 0.25rem 0.5rem var(--med-gray);
     --filter-shadow: drop-shadow(-0.5rem 0.5rem 0.5rem var(--med-gray));
 }
+
 /* ----- SKIP LINK STYLES ----- */
+
 #skip {
     position: absolute;
     left: -10000px;
@@ -80,12 +82,15 @@ table {
     width: auto;
     height: auto;
   }
+
 /* ---------- BODY STYLES ---------- */
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 body {
     font-family: var(--fonts);
     font-weight: 300;
@@ -95,7 +100,9 @@ body {
     padding:0;
     overflow-x: hidden;
 }
+
 /* ---------- HEADER STYLES ---------- */
+
 h1 {
     margin-top: 0;
     margin-bottom: 35px;
@@ -104,6 +111,7 @@ h1 {
     font-size: 340%;
     font-family: 'Liu Jian Mao Cao', cursive; 
 }
+
 h2 {
     font-size: 1.75em;
     word-spacing: 2px;
@@ -112,6 +120,7 @@ h2 {
     letter-spacing: 1px;
     text-transform: uppercase;
 }
+
 h2:after {
     display: block;
     height: 2px;
@@ -121,27 +130,34 @@ h2:after {
     margin: 0 auto;
     margin-top: 30px;
 }
+
 h3 {
     font-size: 1.5em;
     text-transform: uppercase;
 }
+
 h4 {
     font-size: 1.25em;
     font-weight: 400;
 }
+
 h5 {
     font-size: 1em;
     font-weight: 400;
 }
+
 #mainNavigation {
     visibility: hidden;
+    position: absolute;
 }
+
 header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(images/hero.jpg);
     height: 100vh;
     background-size: cover;
     background-attachment: fixed;
 }
+
 .mainNav {
     display: flex;
     align-items: center;
@@ -150,38 +166,45 @@ header {
 	margin: 0 auto;
     list-style: none;
 }
+
 .mainNav li {
     display: inline-block;
     margin-left: 40px;
 }
+
 .mainNav li a:link,
 .mainNav li a:visited {
     padding: 8px 0;
     color: #fff;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 90%;
+    font-size: 1.1em;
     border-bottom: 2px solid transparent;
      -webkit-transition: border-bottom 0.2s;
     transition: border-bottom 0.2s;
 }
+
 .mainNav li a:hover,
 .mainNav li a:active {
     border-bottom: 2px solid #FF9494;
 }
+
 .logo {
     height: 100px;
     width: auto;
-    float: left;
+    margin: 0 auto;
     margin-top: 20px;
+   
 }
+
 .logo-brown {
     display: none;
     height: 50px;
     width: auto;
-    float: left;
+    margin: 0 auto;
     margin: 5px 0;
 }
+
 #ourStoryHeader {
     position: absolute;
     top: 50%;
@@ -191,6 +214,7 @@ header {
 }
 
 /*--------- STICKY NAV---------*/
+
 .sticky {
     position: fixed;
     top: 0;
@@ -204,17 +228,21 @@ header {
 
 .sticky .mainNav { margin-top: 18px;
 }
+
 .sticky .mainNav li a:link,
 .sticky .mainNav li a:visited {
     padding: 16px 0;
     color: #555;
 }
+
 .sticky .logo {
     display: none;
 }
+
 .sticky .logo-brown {
     display: block;
 }
+
 /*--------- STICKY NAV END---------*/
 
 .button {
