--- a/styles.css
+++ b/styles.css
@@ -162,7 +162,7 @@ header {
     display: flex;
     align-items: center;
 	justify-content: space-between;
-    padding: 16px;
+    /*padding: 16px;*/
 	margin: 0 auto;
     list-style: none;
 }
@@ -202,7 +202,7 @@ header {
     height: 50px;
     width: auto;
     margin: 0 auto;
-    margin: 5px 0;
+    margin: 5px 80px;
 }
 
 #ourStoryHeader {
@@ -233,7 +233,7 @@ header {
 .sticky .mainNav li a:link,
 .sticky .mainNav li a:visited {
     padding: 16px 0;
-    color: #555;
+    color: #5D534A;
 }
 
 .sticky .logo {
@@ -361,6 +361,7 @@ h2 + p {
     row-gap: 30px;
     padding: 40px;
     background-color: var(--white);
+    margin-top: -50px;
 }
 
 #pastries h2 {
