--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@ table {
     --fonts: 'Lato', 'Arial', sans-serif;
     --white: #fff;
     --blk: #000;
+    --brown: #362222;
     --lt-gray: #eaeaea;
     --med-gray: #555;
     --dk-gray: #444;
@@ -100,6 +101,14 @@ body {
     padding:0;
     overflow-x: hidden;
 }
+/*--------CHANGE COLOR MODE LIGHT//DARK SECTION START----------*/
+/*
+.dark-mode {
+    color: var(--white);
+    background-color: var(--brown);
+}
+*/
+/*--------CHANGE COLOR MODE LIGHT//DARK SECTION END----------*/
 
 /* ---------- HEADER STYLES ---------- */
 
@@ -146,13 +155,34 @@ h5 {
     font-weight: 400;
 }
 
+ion-icon {
+    color: var(--dk-pink);
+    font-size: 4em;
+    --ionicon-stroke-width: 20px;
+    padding-bottom: 20px;
+}
+
+#socialMedia ion-icon {
+    color: var(--lt-gray);
+    font-size: 1.2em;
+    --ionicon-stroke-width: 20px;
+    padding-bottom: 20px;
+ }
+
+.sectionPink {
+    background-color: var(--lt-pink);
+}
+.sectionWhite {
+    background-color: var(--brown);
+}
+
 #mainNavigation {
     visibility: hidden;
     position: absolute;
 }
 
 header {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(images/hero.jpg);
+    background-image: linear-gradient(rgba(54, 34, 34, 0.7), rgba(54, 34, 34, 0.7)), url(images/hero.jpg);
     height: 100vh;
     background-size: cover;
     background-attachment: fixed;
@@ -254,7 +284,7 @@ header {
     text-decoration: none;
     border-radius: 1.5em;
     border: 1px solid var(--dk-pink);
-    font-weight: 400;
+    font-weight: 300;
     padding: 10px 30px;
 }
 #btnOurStory {
@@ -267,8 +297,7 @@ header {
 main {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 620px 620px 1080px 620px 620px 80px;
-    gap: 1em;
+    grid-auto-rows: auto;
 	margin: 0 auto;
 }
 
@@ -277,42 +306,30 @@ main {
 #features {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto;
+    grid-template-rows: 1fr 1fr;
+    grid-auto-rows: auto;
     padding: 40px;
-    background-color: var(--white);
-    height: 420px;
 }
 
-#features h2, #features p {
-    grid-row: 1/2;
+.features-sectHeader {
+    grid-row: 1;
     grid-column: 1/5;
 }
 
 h2 + p {
     max-width: 70ch;
 	margin: 0 auto;
-    padding-top: 6em;
+    padding-top: 10px;
     font-size: 1.15em;
 }
 
-#features p {
-    padding-bottom: 40px
-}
-
 #days365, #ready20Min, #organic, #orderAnything {
+    grid-row: 2/3;
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: left;
-    padding: 0 20px;
-}
-
-#days365 img.svgImg, #ready20Min img.svgImg, #organic img.svgImg, #orderAnything img.svgImg {
-    width: 60px;
-    height: auto;
-    align-items: center;
-    padding-bottom: 1em;
-    order: 1;
+    text-align: center;
+    padding: 10px 20px;
 }
 
 #days365 h3, #ready20Min h3, #organic h3, #orderAnything h3 {
@@ -323,20 +340,6 @@ h2 + p {
     order: 3;
 }
 
-ion-icon {
-    color: var(--dk-pink);
-    font-size: 4em;
-    --ionicon-stroke-width: 20px;
-    padding-bottom: 20px;
-}
-
-#socialMedia ion-icon {
-    color: var(--lt-gray);
-    font-size: 1.2em;
-    --ionicon-stroke-width: 20px;
-    padding-bottom: 20px;
- }
-
 /*--------FEATURE SECTION END----------*/
 
 /*--------HOW TO SECTION START----------*/
@@ -344,26 +347,31 @@ ion-icon {
 #howTo {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 3fr;
+    grid-template-rows: 1fr 1fr;
     padding: 40px;
-    background-color: var(--lt-pink);
-    height: 520px;
 }
 
-#howTo h2 {
-    grid-row: 1/2;
+.howTo-sectHeader {
+    grid-row: 1;
     grid-column: 1/5;
 }
 
-#howTo p {
+.howTo-sectHeader p {
+    grid-row: 2;
+    grid-column: 1;
     padding-right:2em;
     padding-top:2px;
 }
 
-#howTo iframe {
+.howTo-video {
+    grid-column: 2/3;
+    grid-row: 2;
+
     width: 560px;
     height: 315px;
+    justify-content: center;
 }
+
 /*--------HOW TO SECTION END----------*/
 
 /*--------PASTRIES SECTION START----------*/
@@ -374,8 +382,7 @@ ion-icon {
     grid-template-rows: 1fr 3fr 3fr;
     row-gap: 30px;
     padding: 40px;
-    background-color: var(--white);
-    margin-top: -50px;
+    background-color: var(--brown);
 }
 
 #pastries h2 {
@@ -392,8 +399,6 @@ ion-icon {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     padding: 40px;
-    background-color: var(--lt-pink);
-    height: 320px;
 }
 
 #game p {
@@ -447,15 +452,19 @@ span {
 
 /*--------FORM SECTION START----------*/
 
-#form {
-	display: grid;
+#tellUs-form {
+    display: grid;
     grid-template-rows: 25% 2fr;
     grid-template-columns: 1fr;
+    padding: 40px;
+    background-color: var(--brown);
+}
+#form {
     align-content: flex-end;
 	margin: 0 auto;
 	color: var(--dk-gray);
 	font-size: 1.1em;
-    height: 320px;
+   
 }
 
 input, label, fieldset{
@@ -533,10 +542,14 @@ input, label, fieldset{
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: 1fr 1fr;
-    background-color: var(--dk-gray);
+    padding: 40px;
+    background-color: var(--brown);
     color: var(--lt-gray);
-    height:200px;
     margin: 0 auto;
+    
+}
+hr {
+    pos
 }
 
 small {
