--- a/styles.css
+++ b/styles.css
@@ -314,6 +314,7 @@ main {
     grid-template-rows: 1fr 1fr;
     grid-auto-rows: auto;
     padding: 40px;
+    color: var(--white);
 }
 
 .features-sectHeader {
@@ -369,12 +370,9 @@ h2 + p {
 }
 
 .howTo-video {
-    grid-column: 2/3;
-    grid-row: 2;
-
-    width: 560px;
-    height: 315px;
-    justify-content: center;
+    grid-column: 1/3;
+    grid-row: 2/3;
+    margin: 0 auto;
 }
 
 /*--------HOW TO SECTION END----------*/
@@ -392,6 +390,13 @@ h2 + p {
 #pastries h2 {
     grid-row: 1/2;
     grid-column: 1/5;
+    color: var(--white);
+}
+#pastries h3 {
+    margin-bottom: 5px;
+}
+#pastries h3, #pastries h4, #pastries h5, #pastries li {
+    color: var(--white);
 }
 
 /*--------PASTRIES SECTION END----------*/
