--- a/styles.css
+++ b/styles.css
@@ -392,11 +392,17 @@ h2 + p {
     grid-column: 1/5;
     color: var(--white);
 }
+
 #pastries h3 {
     margin-bottom: 5px;
 }
+
 #pastries h3, #pastries h4, #pastries h5, #pastries li {
     color: var(--white);
+}
+
+#pastries a {
+    color: var(--dk-pink);
 }
 
 /*--------PASTRIES SECTION END----------*/
@@ -410,10 +416,10 @@ h2 + p {
     padding: 40px;
 }
 
-#game p {
-    grid-row: 2/3;
-    align-items: start;
-    padding-bottom: 60px;
+.playGame {
+    grid-row: 1;
+    grid-column: 1/3;
+    text-align: center;
 }
 
 #game h2 + p {
@@ -421,6 +427,19 @@ h2 + p {
     margin: 0 auto;
     padding-top: 0;
     font-size: 1.15em;
+}
+
+.gameBtn {
+grid-row: 3;
+grid-column: 1/3;
+margin: 0 auto;
+align-content: center;
+}
+
+.randomNumbers {
+    grid-row: 2;
+    grid-column: 1/3;
+    align-content: center;
 }
 
 span {
