--- a/styles.css
+++ b/styles.css
@@ -100,15 +100,8 @@ body {
     margin:0;
     padding:0;
     overflow-x: hidden;
+    background-color: var(--lt-pink);
 }
-/*--------CHANGE COLOR MODE LIGHT//DARK SECTION START----------*/
-/*
-.dark-mode {
-    color: var(--white);
-    background-color: var(--brown);
-}
-*/
-/*--------CHANGE COLOR MODE LIGHT//DARK SECTION END----------*/
 
 /* ---------- HEADER STYLES ---------- */
 
@@ -479,6 +472,38 @@ span {
 
 /*--------GAME SECTION END----------*/
 
+/*--------LOCATIONS SECTION START----------*/
+
+#locations {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 3fr;
+    row-gap: 30px;
+    padding: 40px;
+}
+
+#locations h2 {
+    grid-row: 1/2;
+    grid-column: 1/5;
+    color: var(--white);
+}
+
+#locations h3 {
+    margin-bottom: 5px;
+}
+
+#locations h3, #locations h4, #locations h5, #locations li {
+    color: var(--white);
+}
+
+#locations a {
+    color: var(--dk-pink);
+}
+
+/*--------LOCATIONS SECTION END----------*/
+
+
+
 /*--------FORM SECTION START----------*/
 
 #tellUs-form {
@@ -609,4 +634,11 @@ small {
     padding-left: 16px;
 }
 
-/*--------FOOTER SECTION END----------*/
+/*--------FOOTER SECTION END----------*//*--------CHANGE COLOR MODE LIGHT//DARK SECTION START----------*/
+
+.dark-mode {
+    color: var(--white);
+    background-color: #362222;
+}
+
+/*--------CHANGE COLOR MODE LIGHT//DARK SECTION END----------*/
