--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,13 @@ body {
 
 /* ---------- HEADER STYLES ---------- */
 
+
+.mystyle {
+    width: 100%;
+    background-color: var(--brown);
+    color: white;
+    box-sizing: border-box;
+  }
 h1 {
     margin-top: 0;
     margin-bottom: 35px;
@@ -190,7 +197,6 @@ header {
     display: flex;
     align-items: center;
 	justify-content: space-between;
-    /*padding: 16px;*/
 	margin: 0 auto;
     list-style: none;
 }
@@ -220,7 +226,7 @@ header {
 .logo {
     height: 100px;
     width: auto;
-    margin: 0 auto;
+    margin: 5px 80px;
     margin-top: 20px;
    
 }
@@ -438,7 +444,7 @@ align-content: center;
 }
 
 span {
-    color: red;
+    color: var(--dk-pink);
 }
 
 #random1, #random2 {
@@ -448,7 +454,6 @@ span {
     width: fit-content;
     padding-left: 32%;
     text-align: center;
-    color: var(--dk-gray);
 }
 
 #gameMsg {
@@ -488,15 +493,10 @@ span {
 #locations h2 {
     grid-row: 1/2;
     grid-column: 1/5;
-    color: var(--white);
 }
 
 #locations h3 {
     margin-bottom: 5px;
-}
-
-#locations h3, #locations h4, #locations h5, #locations li {
-    color: var(--white);
 }
 
 #locations a {
@@ -522,7 +522,7 @@ span {
 #form {
     align-content: flex-end;
 	margin: 0 auto;
-	color: var(--dk-gray);
+	color: var(--white);
 	font-size: 1.1em;
    
 }
@@ -547,12 +547,12 @@ input, label, fieldset{
   input{
       font-size: 1em;
       padding: 0.25em 0.5em;
-      border: 1px solid #444;
+      border: 1px solid #fff;
       height: 1.5em;
   }
   
   fieldset{
-      border: 1px solid #444;
+      border: 1px solid #fff;
       padding: 0.5em 0 1em 0.5em;
       margin: 0.75em 0 0.25em 0;
       width: 98%;
@@ -607,9 +607,6 @@ input, label, fieldset{
     margin: 0 auto;
     
 }
-hr {
-    pos
-}
 
 small {
     grid-column: 1/3;
@@ -643,9 +640,16 @@ small {
 
 /*--------FOOTER SECTION END----------*//*--------CHANGE COLOR MODE LIGHT//DARK SECTION START----------*/
 
-.dark-mode {
-    color: var(--white);
-    background-color: #362222;
+button[onclick]{
+    width: fit-content;
+    color: #fff;
+    background-color: var(--dk-pink);
+    border-radius: 1.5em;
+    border: 1px solid var(--dk-pink);
+    font-weight: 400;
+    padding: 10px 20px;
+    margin: 0 auto;
+    margin-left: 20px;
 }
 
 /*--------CHANGE COLOR MODE LIGHT//DARK SECTION END----------*/
