--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ table {
     --med-gray: #555;
     --dk-gray: #444;
     --natural: #FFF5DA;
+    --lt-natural: #FEFCF3;;
     --lt-pink: #FFE3E1;
     --med-pink: #FFD1D1;
     --dk-pink: #FF9494;
@@ -91,20 +92,35 @@ table {
     padding: 0;
     box-sizing: border-box;
 }
+html {
+    background-color: var(--lt-natural);
+}
 
 body {
     font-family: var(--fonts);
     font-weight: 300;
     color: var(--dk-gray);
     line-height: 1.35;
-    margin:0;
+    margin:0 auto;
     padding:0;
     overflow-x: hidden;
     background-color: var(--lt-pink);
+    max-width: 1280px;
 }
 
-/* ---------- HEADER STYLES ---------- */
+.sectionPink {
+    background-color: var(--lt-pink);
+}
 
+.sectionWhite {
+    background-color: var(--white);
+}
+
+.sectionBrown {
+    background-color: var(--brown);
+}
+
+/* ---------- DARK AND LIGHT MODE START ---------- */
 
 .mystyle {
     width: 100%;
@@ -112,6 +128,11 @@ body {
     color: white;
     box-sizing: border-box;
   }
+
+  /* ---------- DARK AND LIGHT MODE END ---------- */
+
+/* ------------ HEADER STYLES START------------- */
+
 h1 {
     margin-top: 0;
     margin-bottom: 35px;
@@ -169,18 +190,6 @@ ion-icon {
     padding-bottom: 20px;
  }
 
-.sectionPink {
-    background-color: var(--lt-pink);
-}
-
-.sectionWhite {
-    background-color: var(--white);
-}
-
-.sectionBrown {
-    background-color: var(--brown);
-}
-
 #mainNavigation {
     visibility: hidden;
     position: absolute;
@@ -192,6 +201,29 @@ header {
     background-size: cover;
     background-attachment: fixed;
 }
+
+.button {
+    background-color: var(--dk-pink);
+    color: var(--white);
+    margin-right: 1em;
+    width: fit-content;
+    text-decoration: none;
+    border-radius: 1.5em;
+    border: 1px solid var(--dk-pink);
+    font-weight: 300;
+    padding: 10px 30px;
+}
+
+#btnOurStory {
+    background-color: transparent;
+    color: var(--dk-pink);
+    margin-right: 1em;
+    border: 1px solid var(--dk-pink);
+}
+
+/* ---------- HEADER STYLES END---------- */
+
+/* ---------- NAV STYLES START---------- */
 
 .mainNav {
     display: flex;
@@ -247,7 +279,9 @@ header {
     transform: translate(-50%, -50%);
 }
 
-/*--------- STICKY NAV---------*/
+/* ---------- NAV STYLES END---------- */
+
+/*----------- STICKY NAV START---------*/
 
 .sticky {
     position: fixed;
@@ -280,23 +314,7 @@ header {
 
 /*--------- STICKY NAV END---------*/
 
-.button {
-    background-color: var(--dk-pink);
-    color: var(--white);
-    margin-right: 1em;
-    width: fit-content;
-    text-decoration: none;
-    border-radius: 1.5em;
-    border: 1px solid var(--dk-pink);
-    font-weight: 300;
-    padding: 10px 30px;
-}
-#btnOurStory {
-    background-color: transparent;
-    color: var(--dk-pink);
-    margin-right: 1em;
-    border: 1px solid var(--dk-pink);
-}
+/*--------MAIN SECTION START----------*/
 
 main {
     display: grid;
@@ -304,6 +322,7 @@ main {
     grid-auto-rows: auto;
 	margin: 0 auto;
 }
+/*--------MAIN SECTION END----------*/
 
 /*--------FEATURE SECTION START----------*/
 
@@ -313,10 +332,11 @@ main {
     grid-template-rows: 1fr 1fr;
     grid-auto-rows: auto;
     padding: 40px;
-    color: var(--white);
+    color: var(--white);    
+    background-color: var(--brown);
 }
 
-.features-sectHeader {
+#features h2, #features p  {
     grid-row: 1;
     grid-column: 1/5;
 }
@@ -324,7 +344,7 @@ main {
 h2 + p {
     max-width: 70ch;
 	margin: 0 auto;
-    padding-top: 10px;
+    padding-top: 100px;
     font-size: 1.15em;
 }
 
@@ -354,24 +374,22 @@ h2 + p {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     padding: 40px;
+    background-color: var(--lt-pink);
 }
 
-.howTo-sectHeader {
+#howTo h2, #howTo p {
     grid-row: 1;
     grid-column: 1/5;
 }
 
-.howTo-sectHeader p {
-    grid-row: 2;
-    grid-column: 1;
-    padding-right:2em;
-    padding-top:2px;
-}
-
 .howTo-video {
     grid-column: 1/3;
-    grid-row: 2/3;
+    grid-row: 2;
     margin: 0 auto;
+}
+iframe {
+    width: 560px;
+    height: 315px;
 }
 
 /*--------HOW TO SECTION END----------*/
@@ -385,19 +403,19 @@ h2 + p {
     row-gap: 30px;
     padding: 40px;
     padding-left: 5%;
+    background-color: var(--brown);
 }
 
 #pastries h2 {
     grid-row: 1/2;
     grid-column: 1/5;
-    color: var(--white);
 }
 
 #pastries h3 {
     margin-bottom: 5px;
 }
 
-#pastries h3, #pastries h4, #pastries h5, #pastries li {
+#pastries h2, #pastries h3, #pastries h4, #pastries h5, #pastries li {
     color: var(--white);
 }
 
