--- a/styles.css
+++ b/styles.css
@@ -432,26 +432,27 @@ iframe {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     padding: 40px;
+    background-color: var(--lt-pink);
 }
 
-.playGame {
+#game h2, #game p {
     grid-row: 1;
     grid-column: 1/3;
     text-align: center;
 }
 
-#game h2 + p {
+h2 + p {
     max-width: 70ch;
     margin: 0 auto;
-    padding-top: 0;
+    padding-top: 100px;
     font-size: 1.15em;
 }
 
 .gameBtn {
-grid-row: 3;
-grid-column: 1/3;
-margin: 0 auto;
-align-content: center;
+    grid-row: 3;
+    grid-column: 1/3;
+    margin: 0 auto;
+    align-content: center;
 }
 
 .randomNumbers {
@@ -496,58 +497,31 @@ span {
 
 /*--------GAME SECTION END----------*/
 
-/*--------LOCATIONS SECTION START----------*/
-
-
-#locations {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 3fr;
-    row-gap: 30px;
-    padding: 40px;
-    padding-left: 5%;
-}
-
-#locations h2 {
-    grid-row: 1/2;
-    grid-column: 1/5;
-}
-
-#locations h3 {
-    margin-bottom: 5px;
-}
-
-#locations a {
-    color: var(--dk-pink);
-}
-
-#locations img {
-    width: 250px;
-}
-
-/*--------LOCATIONS SECTION END----------*/
-
-
-
 /*--------FORM SECTION START----------*/
 
-#tellUs-form {
-    display: grid;
-    grid-template-rows: 25% 2fr;
-    grid-template-columns: 1fr;
-    padding: 40px;
-}
 #form {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 2fr;
+    padding: 40px;
+    background-color: var(--brown);
+}
+
+#form h2 {
+    color: var(--white);
+}
+
+#formContact {
     align-content: flex-end;
 	margin: 0 auto;
 	color: var(--white);
 	font-size: 1.1em;
-   
+    max-width: 100%;
 }
 
 input, label, fieldset{
 	display: block;
-	width: 95%;
+	width: 100%;
 }
 
 .required{
@@ -573,7 +547,7 @@ input, label, fieldset{
       border: 1px solid #fff;
       padding: 0.5em 0 1em 0.5em;
       margin: 0.75em 0 0.25em 0;
-      width: 98%;
+      width: 100%;
       display: grid;
       grid-template-columns: 1fr 3fr 1fr 3fr;
   }
@@ -612,7 +586,42 @@ input, label, fieldset{
       border-color: var(--dk-gray);
   }
 
-  /*--------FORM SECTION END----------*/
+/*--------FORM SECTION END--------------*/
+
+/*--------LOCATIONS SECTION START----------*/
+
+
+#locations {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 3fr;
+    row-gap: 30px;
+    padding: 40px;
+    padding-left: 5%;
+}
+
+#locations h2 {
+    grid-row: 1/2;
+    grid-column: 1/5;
+}
+
+#locations h3 {
+    margin-bottom: 5px;
+}
+
+#locations a {
+    color: var(--dk-pink);
+}
+
+#locations img {
+    width: 250px;
+}
+
+/*--------LOCATIONS SECTION END----------*/
+
+
+
+
 
   /*--------FOOTER SECTION START----------*/
 
