--- a/styles.css
+++ b/styles.css
@@ -560,12 +560,16 @@ input, label, fieldset{
       display: grid;
       grid-template-columns: 1fr 3fr 1fr 3fr;
   }
+  input[type=radio]{
+    margin-left: 60%;
+    margin-top: 15%;
+  }
   
   input[type=submit]{
       padding: 0.75em;
       width: fit-content;
       height: auto;
-      margin-left: 67%;
+      margin-left: 125%;
       color: #fff;
       background-color: var(--dk-pink);
       border: none;
@@ -575,7 +579,6 @@ input, label, fieldset{
       border: 1px solid var(--dk-pink);
       font-weight: 400;
       padding: 10px 30px;
-      margin: 0 auto;
       margin-top: 20px;
   }
   
